--- a/.env
+++ b/.env
@@ -4,3 +4,13 @@ MONGO_URI=mongodb://127.0.0.1:27017/onehealth
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long-and-random
 JWT_EXPIRES_IN=7d
 FRONTEND_URL=https://onehealth-ebon.vercel.app/
+# Gemini AI
+GEMINI_API_KEY=AIzaSyAixpjdzPuI9YOrFWw8t062K5KWTlbIE-s
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=willynorbert53@gmail.com
+SMTP_PASS=ubkkmjpxbdbvewys
+SMTP_FROM="One Healthline <no-reply@onehealth.com>"
+
