--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/onehealth
+MONGO_URI= mongodb+srv://wiseacademy:01402@cluster0.bsxehn0.mongodb.net/onehealth?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long-and-random
 JWT_EXPIRES_IN=7d
 FRONTEND_URL=https://onehealth-ebon.vercel.app/
