--- a/.env
+++ b/.env
@@ -14,3 +14,6 @@ SMTP_USER=willynorbert53@gmail.com
 SMTP_PASS=ubkkmjpxbdbvewys
 SMTP_FROM="One Healthline <no-reply@onehealth.com>"
 
+JITSI_APP_ID=your-jitsi-app-id
+JITSI_SECRET=your-jitsi-secret-key
+JITSI_DOMAIN=meet.jit.si
