--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^6.10.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.1.0",
     "vite": "^5.4.19"
   },
   "devDependencies": {
