--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,23 @@
-# MongoDB
-MONGO_URI=mongodb://localhost:27017/healthline_connect
 
-# JWT
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
-
-# Server
 PORT=5000
-NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+MONGO_URI=mongodb+srv://wiseacademy:01402@cluster0.bsxehn0.mongodb.net/onehealth?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long-and-random
+JWT_EXPIRES_IN=111d
+FRONTEND_URL=https://onehealth-ebon.vercel.app/
+# Gemini AI
+GEMINI_API_KEY=AIzaSyAixpjdzPuI9YOrFWw8t062K5KWTlbIE-s
 
-# Email Service (optional)
-EMAIL_HOST=smtp.gmail.com
-EMAIL_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASS=your-app-password
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=willynorbert53@gmail.com
+SMTP_PASS=ubkkmjpxbdbvewys
+SMTP_FROM="One Healthline <no-reply@onehealth.com>"
 
-# Jitsi Meet Configuration
 JITSI_APP_ID=your-jitsi-app-id
 JITSI_SECRET=your-jitsi-secret-key
 JITSI_DOMAIN=meet.jit.si
 
-# For self-hosted Jitsi (optional)
-# JITSI_DOMAIN=your-jitsi-domain.com
+CLOUDINARY_CLOUD_NAME=dn9msxmaf
+CLOUDINARY_API_KEY=883334881435652
+CLOUDINARY_API_SECRET=eHD9saTg_K3RwsTaVdmh8Lcg6-w
