--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,11 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start -p $PORT",
     "lint": "next lint"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
