--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p $PORT",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "engines": {
     "node": "20.x"
@@ -33,11 +34,13 @@
     "react-icons": "^5.5.0",
     "react-leaflet": "^4.2.1",
     "socket.io-client": "^4.8.1",
+    "sharp": "^0.33.5",
     "swr": "2.2.5",
     "tailwind-merge": "^3.3.1",
     "zod": "3.23.8"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.10",
     "@types/js-cookie": "3.0.6",
     "@types/leaflet": "^1.9.20",
     "@types/next": "^8.0.7",
