--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,8 @@ services:
         value: https://onehealthconnekt.onrender.com/api
       - key: NODE_ENV
         value: production
+      - key: NODE_OPTIONS
+        value: --max-old-space-size=1024
       - key: NODE_VERSION
         value: 20
       - key: NEXT_DISABLE_MIDDLEWARE_SOURCEMAPS
