--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-make-it-very-long
 JWT_EXPIRES_IN=111d
 FRONTEND_URL=
 # Gemini AI
-GEMINI_API_KEY=AIzaSyAixpjdzPuI9YOrFWw8t062K5KWTlbIE-s
+GEMINI_API_KEY=
 
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
