--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "mongoose": "^8.16.1",
     "mongoose-paginate-v2": "^1.9.1",
     "multer": "^2.0.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "2.6.7",
     "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.2",
     "react": "^18.3.1",
@@ -50,6 +50,7 @@
     "vite": "^5.4.19",
     "winston": "^3.11.0",
     "xss-clean": "^0.1.4"
+    
   },
   "devDependencies": {
     "jest": "^29.7.0",
