--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "class-variance-authority": "^0.7.1",
     "classnames": "2.5.1",
+    "framer-motion": "^12.23.24",
     "js-cookie": "3.0.5",
     "jwt-decode": "4.0.0",
     "leaflet": "^1.9.4",
