--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "seed": "node seed.js"
   },
   "keywords": [],
   "author": "irabaruta & urban",
@@ -82,3 +83,4 @@
     ]
   }
 }
+
